_archive/content-services/4.2/pra/1/topics/pra-whats-new.md
---
author: Alfresco Documentation
---

# What's new in the Alfresco One API

At Alfresco we're always thinking up new ways to help you write great applications.

## October 2013

We've updated our public API to give your applications easier access to your data.

-   The full [Alfresco One API](pra-welcome.md) is now available on Alfresco 4.2 in addition to Alfresco in the Cloud. Now your applications can access content using a single consistent interface.
-   The Alfresco One API now has support for workflow objects; [deployments](../concepts/act-deployments.md), [process definitions](../concepts/act-procdefs.md), [processes](../concepts/act-processes.md), and [tasks](../concepts/act-tasks.md).
-   The Alfresco CMIS API now supports the CMIS 1.1 specification. Alfresco provides the new [CMIS 1.1 browser binding](../concepts/cmis-1.1-browser-binding.md) to simplify your web applications, the use of [Secondary Data Types](../concepts/cmis-1.1-using-aspects.md) to create and manipulate Alfresco Aspects, and the ability to [append content](../concepts/cmis-1.1-appending-content.md) to data items.

**Parent topic:**[Alfresco One API](../../../pra/1/topics/pra-welcome.md)

